Fix form action buttons on mobile

--- a/themes/raiser/sass/components/_forms.scss
+++ b/themes/raiser/sass/components/_forms.scss
@@ -51,6 +51,16 @@
   padding: 0.6em 1em;
 }
 
+#edit-submit, #edit-cancel {
+  @include xsmall {
+    float: none; 
+    display: block;
+    margin-bottom: 1em;
+    text-align: center;
+    width: 100%;
+  }
+}
+
 #user-register-form,
 #user-pass {
   #edit-submit {
